# cuAStar

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  README.txt  buidAstarPlannerTest.bat  build_test.bat  test_math.exp  test_math.lib
.github/worflows/: build-sphinx-documentation.yml  doxygen-gh-pages.yml
.github/workflows/: static.yml
1602_LCD/: Makefile
1_digit_LED_Segment_Display/: 1_digit_LED_Segment_Display.c
4_digit_LED_Segment_Display/: 4_digit_LED_Segment_Display.c  Makefile
5V_Relay/: 5V_Relay.c
Breathing_LED/: Breathing_LED.py  Makefile
Button_controlled_LED/: Makefile
DS3231/: DS3231.c
Flame_Sensor/: Flame_Sensor.c
Hello_World/: Makefile
Joystick_Module/: Joystick_Module.c
LED_Chasing_Effect/: Makefile
LED_Matrix/: LED_Matrix.c
LM35/: LM35.c  Makefile
MQ-2/: Makefile
PIR_Motion_Sensor/: PIR_Motion_Sensor.c
Passive_Buzzer/: Makefile  Passive_Buzzer.c
Photo_Resistor/: Photo_Resistor.c
RGB_LED/: Makefile
Responder/: Responder.c
Servo/: Servo.c
Soil_Humidity/: Soil_Humidity.c
Ultrasonic/: Makefile
cpp/: cuAStar.hpp
data/OpenTrench3D_Simple/: Area_1_Site_1_24463.ply  Area_1_Site_1_48293.ply
docs/: conf.py
docs/html/: annotated.html  annotated_dup.js  class_astar_planner-members.html  class_astar_planner.html  class_astar_planner.js  class_node2d-members.html  class_node2d.html  class_node2d.js  class_node3d-members.html  class_node3d.html  class_node3d.js  classes.html  cu_a_star_8hpp.html  cu_a_star_8hpp.js  cu_a_star_8hpp_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen.css  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  menudata.js  navtree.css  navtreedata.js  navtreeindex0.js  pages.html  struct_circle-members.html  struct_circle.html  struct_circle.js  struct_color-members.html  struct_color.html  struct_color.js  tabs.css  (+1 more)
docs/html/search/: all_0.js  all_10.js  all_11.js  all_14.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_5.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_e.js  pages_0.js  search.css  searchdata.js  variables_0.js  (+12 more)
docs/source/: index.rst
docs/xml/: Doxyfile.xml  class_astar_planner.xml  class_node2d.xml  class_node3d.xml  cu_a_star_8hpp.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  indexpage.xml  struct_circle.xml  struct_color.xml  todo.xml
example/: CMakeLists.txt
exemple/: CMakeLists.txt  run.cpp  run_a_star_planner.cpp
include/: a_star_planner.cuh  a_star_planner.hpp  blast.cu  blast.h  bspline_trajectory.hpp  common.hpp  cpprobotics_types.hpp  cuAStar.hpp  cubic_spline_planner.hpp  cubic_spline_trajectory.hpp  curobotics.hpp  dijkstra_planner.hpp  frenet_path.hpp  frenet_trajectory.hpp  math.hpp  motion_model.hpp  pf_planner.hpp  planner.hpp  quartic_polynomial.hpp  quintic_polynomial.hpp  rrt_planner.hpp  rrt_star_planner.hpp  struct.hpp  structs.hpp  trajectory.hpp  trajectory_optimizer.hpp  utils.cuh  utils.hpp  visualization.hpp
include/cuAstar/: cuAStar.hpp
lesson10_Flame_Sensor/: Makefile
lesson11_Ball_Tilt_Sensor/: Makefile
lesson13_1_digit_LED_Segment_Display/: Makefile
lesson14_74HC595/: 74HC595.c  Makefile
lesson14_74HC595/__Previews/: 74HC595.cPreview
lesson16_74HC595_LED_Matrix/: 74HC595_LED_Matrix.c  Makefile
lesson16_LED_Matrix/: Makefile
lesson17_1602_LCD/: 1602_LCD.c
lesson18_RGB_LED/: RGB_LED.c
lesson19_Servo/: Makefile
lesson1_Hello_World/: HelloWorld.c
lesson1_Hello_World/__Previews/: HelloWorld.cPreview
lesson20_ULN2003/: ULN2003.c
lesson21_Photo_Resistor/: Makefile
lesson23_pcf8591/: Makefile  pcf8591.c
lesson24_PIR_Motion_Sensor/: Makefile
lesson25_MQ-2/: MQ-2.c
lesson26_ADXL345/: ADXL345.c  Makefile
lesson27_Ultrasonic/: Ultrasonic.c
lesson28_Joystick_Module/: Makefile
lesson29_5V_Relay/: Makefile
lesson2_LED_Blinking/: Makefile
lesson30_DHT11/: DHT11.c  Makefile
lesson31_ Soil_Humidity/: Makefile
lesson3_Breathing_LED/: Breathing_LED.c
lesson4_Traffic_Light/: Makefile  Traffic_Light.c
lesson5_LED_Chasing_Effect/: LED_Chasing_Effect.c
lesson6_Button_controlled_LED/: Button_controlled_LED.c
lesson8_Active_Buzzer/: Active_Buzzer.c  Makefile
lesson9_Responder/: Makefile
matlab/: cuAStar.hpp
model/: scene.xml
src/: a_star_planner.cpp  a_star_planner.cu  cubic_spline_planner.cu  cubic_spline_trajectory.cpp  cubic_spline_trajectory.cu  dijkstra_planner.cu  frenet_optimal_trajectory.cu  motion_model.cu  pf_planner.cu  state_lattice_planner.cu  test.cpp
test/: CMakeLists.txt  test1.cu  testAstarPlanner.cu  testChunkOpenSet.cu  testComputeChunkOpenSet.cu  testComputeKnnNodes.cu  testComputeOptimalNode.cu  testComputeTrajectory.cu  testDKtree.cu  testEnumerationSortNodes.cu  testGetPlyPointNum.cu  testIsPlyValid.cu  testNode2d.cu  testNode3d.cu  testSetInitialNode.cu  testSortNodes.cu  testStartEndNodes.cu  testTrajectory.cu  test_a_star_planner.cu  test_cuAstar.cu  test_dijkestra_planner.cu  test_get_ply_point_num.cu  test_is_ply_valid.cu  test_math.cu  test_pf_planner.cu  test_std_sphere.cpp  test_utils.cpp  test_visualization.cpp  testcheckNodeExsist.cu  testknn.cu  testply.cu  testsuccesor.cu
